RESOLVED FIXED 275463
[content-visibility] Crash under RenderTableSection::paintObject when continuation is present
https://bugs.webkit.org/show_bug.cgi?id=275463
Summary [content-visibility] Crash under RenderTableSection::paintObject when continu...
zalan
Reported 2024-06-13 18:27:32 PDT
Attachments
[fast-cq]Patch (3.33 KB, patch)
2024-06-13 18:39 PDT, zalan
no flags
zalan
Comment 1 2024-06-13 18:39:04 PDT
Created attachment 471671 [details] [fast-cq]Patch
EWS
Comment 2 2024-06-14 07:16:43 PDT
Committed 280011@main (ea9223dccf8a): <https://commits.webkit.org/280011@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471671 [details].
Note You need to log in before you can comment on or make changes to this bug.