[content-visibility] Crash under RenderTableSection::paintObject when continuation is present https://bugs.webkit.org/show_bug.cgi?id=275463 <rdar://126112896>

Reviewed by Antti Koivisto.

See FIXME comment in RenderTable::paint.

* LayoutTests/fast/dynamic/content-visibility-crash-with-continuation-and-table-expected.txt: Added.
* LayoutTests/fast/dynamic/content-visibility-crash-with-continuation-and-table.html: Added.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::paint):

Canonical link: https://commits.webkit.org/280011@main